fixed horizontal scrolling issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -38,7 +38,9 @@ nav a {
   color: black;
   text-decoration: none;
   font-weight: 700;
-  padding: 0 100%;
+  padding: 3px 100px;
+  text-align: center;
+  width: 100%;
 }
 img {
   width: 100%;
